# algo1-material

./: .gitignore  README.md
Algoritmos Utiles/: CMakeLists.txt  busqueda.cpp  funciones.h  main.cpp  ordenamiento.cpp
Algoritmos Utiles/tests/: busquedaTests.cpp  ordenamientoTests.cpp
labo01/hello_world/: CMakeLists.txt
labo01/labo01_project/: CMakeLists.txt  ej01.cpp  ej02.cpp  ej03.cpp  ej04.cpp  ej05.cpp  ej06.cpp  ej07.cpp  ej08.cpp
labo02/ej07/: CMakeLists.txt
labo02/labo02_project/: CMakeLists.txt  ej01.cpp  ej03.cpp  ej06.cpp
labo03 - mini tp/template-alumnos/: solucion.tex
labo04/labo04_project/: CMakeLists.txt  ej1_01.cpp  ej1_02.cpp  ej1_03.cpp  ej1_04.cpp  ej1_05.cpp  ej1_06.cpp  ej2_01.cpp  ej2_02.cpp
labo04/labo04_project/archivos/in/: 10NumerosEntre1y10EnOrden2.in  cantidadAparicionesDePalabra.in  promedio1.in  subSecuenciaCrecienteMasLarga.in
labo04/template-alumnos/archivos/in/: 10000NumerosEntre1y50.in  10NumerosEntre1y50EnOrden1.in  cantidadApariciones.in  promedio2.in
labo04/template-alumnos/src/: main.cpp  vectores.cpp  vectores.h
labo05/template-alumnos/ejemplo/: CMakeLists.txt  main.cpp
labo05/template-alumnos/taller/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp  taller
labo05/template-alumnos/taller/datos/: loremIpsum.txt
labo05/template-alumnos/taller/test/: cases.cpp  cases.h  test.h
labo06/labo06_project/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
labo06/labo06_project/test/: cases.cpp  test.h
labo06/template-alumnos/: ejercicios.cpp  ejercicios.h
labo07/labo07-project/: main.cpp
labo07/labo07-project/ej1/: esPrimo.h
labo07/labo07-project/ej1/Test/: esPrimoTest.cpp  puntajeTEST.cpp
labo07/labo07-project/ej3/: baldosasDelPiso.cpp  contandoDragones.cpp  contandoDragones.h  electores.h
labo07/labo07-project/ej3/Test/: baldosasDelPisoTEST.cpp  contandoDragonesTEST.cpp
labo07/template-alumnos/: CMakeLists.txt
labo07/template-alumnos/ej1/: esPrimo.cpp  puntaje.cpp  puntaje.h
labo07/template-alumnos/ej2/: llenarTaxis.cpp  llenarTaxis.h
labo07/template-alumnos/ej2/Test/: llenarTaxisTEST.cpp
labo07/template-alumnos/ej3/: baldosasDelPiso.h  electores.cpp
labo07/template-alumnos/ej3/Test/: electoresTEST.cpp
labo08/template_alumnos/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
labo2/ej07/: main.cpp
labo2/labo02_project/: ej02.cpp  ej04.cpp  ej05.cpp
tp02/: README.md  README.txt
tp02/template-alumnos/: .gitignore  CMakeLists.txt  auxiliares.cpp  auxiliares.h  definiciones.h  ejercicios.cpp  ejercicios.h
tp02/template-alumnos/tests/: ej1TEST.cpp  ej2TEST.cpp  ej4TEST.cpp  ej5TEST.cpp  ej6TEST.cpp
